# DataAnalytics_Dashboard

./: .gitignore  CV_SUMMARY.md  Dockerfile  LICENSE  README.md  app_advanced.py  capture_demo.ps1  database.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_advanced.py  start.sh  start_advanced.bat  test_app.py
.github/workflows/: ci.yml  python-ci.yml
docs/: CAPTURAS_TODO.md  EVIDENCIAS.md  GIF_GUIDE.md
static/: dashboard_advanced.html
