[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-analytics-dashboard"
version = "2.0.0"
description = "Sistema avanzado de análisis de datos empresariales con Python, FastAPI, Pandas y SQLite"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jose Vicente", email = "jvab5899@gmail.com"},
]
keywords = ["data", "analytics", "dashboard", "fastapi", "pandas", "sqlite"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pandas>=2.1.4",
    "numpy>=1.26.0",
    "openpyxl>=3.1.2",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/josevicenteprojects/DataAnalytics_Dashboard"
Documentation = "https://github.com/josevicenteprojects/DataAnalytics_Dashboard#readme"
Repository = "https://github.com/josevicenteprojects/DataAnalytics_Dashboard.git"
Issues = "https://github.com/josevicenteprojects/DataAnalytics_Dashboard/issues"

[project.scripts]
data-analytics-dashboard = "app_advanced:main"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88





